docs: 更新项目文档 — CHANGELOG/MIGRATION/README/CONTRIBUTING/AGENTS
- CHANGELOG.md: 新增 CacheAdapter SPI、Java 模块系统兼容、Op.resolve() 策略模式、QuerySpec 拆分、Deprecated API 清理、HikariCP 连接池、配置同步修复
- MIGRATION.md: 新增破坏性变更章节，列出 13 个已移除的废弃方法及替代方案
- README.md: 特性表新增可插拔缓存 CacheAdapter SPI
- CONTRIBUTING.md: 添加新运算符从 7 文件同步简化为 4 文件同步
- AGENTS.md: 更新行数、测试数量、辅助方法说明